[package]
name = "menmos-fuse"
version = "0.0.4-alpha.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "menmos_fs"
path = "src/menmos_fs/lib.rs"

[[bin]]
name = "menmos-fuse"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.2"
testing = {git = "https://github.com/menmos/menmos", tag = "v0.0.4"}

[dependencies]
anyhow = "1"
async-fuse = {git = "https://github.com/menmos/async-fuse-rs", tag = "v0.1.0"}
async-trait = "0.1"
bytes = "1.0"
clap = "3.0.0-beta.2"
menmos-client = {git = "https://github.com/menmos/menmos", tag = "v0.0.4"}
env_logger = "0.8"
lfan = {git = "https://github.com/menmos/menmos", tag = "v0.0.4"}
libc = "0.2"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1.2", features = ["full"]}
